# journey-to-the-clouds-game

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  RetroBoy.sln  RetroBoy.vcxproj  RetroBoy.vcxproj.filters
.cache/clangd/index/: Boy.cpp.28A3CC44E36C811B.idx  Boy.hpp.1A01029242DA0889.idx  Map.cpp.08B722E4B6BD80D2.idx  Map.hpp.58F2A3E6B8905477.idx  main.cpp.66E6ABC218491C4A.idx
.github/workflows/: release.yml
RetroBoy/: RetroBoy.slnx
RetroBoy/RetroBoy/: RetroBoy.cpp
assets/levels/: testFall.txt  testX.txt  testY.txt  tutorial.csv
assets/maps/: level1.tmx  retroboy.tiled-session  test.tmx  tutorial.tiled-session  tutorial.tmx
assets/tilesets/: ts_bricks.tsx  ts_main.tsx  ts_prototype.tsx
docs/: Background.psd  Doxyfile  GDD.md  Grim walk ver 1.psd  Grim.psd  Lucy.psd  ROADMAP.md  bricks.psd  test.psd  tileset.psd
docs/concepts/: concept.psd
docs/documentation/: GDD.md  ROADMAP.md
docs/player/: Grim full.psd
docs/tiled/: jttc.tiled-session
docs/tiles/: bricks.psd  tiles.psd
include/Engine/GUI/: Button.hpp
include/Engine/States/: State.hpp
include/Game/: Game.hpp
include/Game/Entities/: Player.hpp
include/Game/States/: GameState.hpp  MenuState.hpp  PauseState.hpp
include/Game/World/: Map.hpp
src/: Game.cpp  Game.hpp  main.cpp
src/Engine/GUI/: Button.cpp
src/Entities/: Boy.cpp  Boy.hpp  Player.cpp  Player.hpp
src/GUI/: Button.cpp
src/Game/: Game.cpp  main.cpp
src/Game/Entities/: Player.cpp
src/Game/States/: GameState.cpp  MenuState.cpp  PauseState.cpp
src/Game/World/: Map.cpp
src/States/: GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp  PauseState.cpp  PauseState.hpp
src/World/: Map.cpp  Map.hpp
